# ga_seek

./: index.html  sc.js  st.css  test.html
client/: index.html  service.js
cpp/: CMakeLists.txt  main.cpp
cpp/src/game/includes/: Agent.hpp  c_game.hpp
cpp/src/game/sources/: Agent.cpp  Obstacle.cpp
cpp/src/infra/includes/: socket_c.hpp
cpp/src/infra/sources/: socket_c.cpp
server/: main.cpp
server/src/game/: CmakeLists.txt
server/src/game/includes/: NeuralNetwork.hpp  Obstacle.hpp
server/src/game/sources/: NeuralNetwork.cpp  c_game.cpp
server/src/infra/: CmakeLists.txt
